<resources>
    <string name="app_name">Tracker</string>
    <string name="start_location_updates" translatable="false">Start location updates</string>
    <string name="stop_location_updates" translatable="false">Stop location updates</string>

    <string name="service_start_successfully" translatable="false">Service start successfully</string>
    <string name="service_stopped_successfully" translatable="false">Service stopped successfully</string>
    <string name="update_permissions" translatable="false">Please update permissions</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>


    <string name="id_hint">Device id</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="text_button_login">Login</string>
    <string name="field_cannot_empty">Field cannot be empty</string>
    <string name="login_password_incorrect">Device id or Password incorrect</string>
    <string name="failure_connecting">Connection errors</string>


</resources>